# aws-ecr-cleanup

./: .gitignore  Dockerfile  README.md  config.yaml.example  configure_logging.py  main.py  pyproject.toml  requirements-docker.txt  requirements.txt
.circleci/: config.yml
docs/: ecr cleanup policy.drawio
src/aws_ecr_cleanup/: main.py
