[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-ecr-cleanup"
description = "A tool to remove stale images from AWS ECR repositories."
version = "0.0.1"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "objectpath",
    "boto3",
    "jsonpath-ng"
]

[project.scripts]
aws-ecr-cleanup = "aws_ecr_cleanup.main:main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/aws-ecr-cleanup/__init__.py" = ["{version}"]

[project.urls]
"Homepage" = "https://github.com/thabiger/aws-ecr-cleanup"